--- a/mockups/v2-with-editor.html
+++ b/mockups/v2-with-editor.html
@@ -597,6 +597,103 @@
 
     // ============ END CONFIRMATION DIALOG ============
 
+    // ============ KEYBOARD SHORTCUTS MODAL ============
+    const ShortcutsModal = ({ isOpen, onClose }) => {
+      if (!isOpen) return null;
+
+      const shortcuts = [
+        {
+          category: 'Navigation',
+          items: [
+            { keys: ['⌘', '1-9'], description: 'Switch to tab by number' },
+            { keys: ['⌘', '['], description: 'Previous tab' },
+            { keys: ['⌘', ']'], description: 'Next tab' },
+          ]
+        },
+        {
+          category: 'Instances',
+          items: [
+            { keys: ['Enter'], description: 'Enter focus mode' },
+            { keys: ['Esc'], description: 'Exit focus mode / Cancel' },
+            { keys: ['F2'], description: 'Rename active instance' },
+            { keys: ['⌘', 'W'], description: 'Close active instance' },
+          ]
+        },
+        {
+          category: 'Panels',
+          items: [
+            { keys: ['⌘', 'E'], description: 'Toggle plans panel' },
+            { keys: ['⌘', '⇧', 'E'], description: 'Full-screen editor' },
+          ]
+        },
+        {
+          category: 'General',
+          items: [
+            { keys: ['⌘', '?'], description: 'Show keyboard shortcuts' },
+          ]
+        },
+      ];
+
+      return (
+        <div
+          className="fixed inset-0 bg-black/50 flex items-center justify-center z-50"
+          onClick={onClose}
+        >
+          <div
+            className="card-elevated rounded-xl shadow-2xl animate-in max-w-lg w-full mx-4"
+            onClick={(e) => e.stopPropagation()}
+          >
+            {/* Header */}
+            <div className="flex items-center justify-between px-6 py-4 border-b border-surface-600">
+              <h2 className="text-lg font-semibold">Keyboard Shortcuts</h2>
+              <button
+                onClick={onClose}
+                className="p-1.5 rounded-lg text-theme-muted hover:text-theme-primary hover:bg-surface-600 transition-colors"
+              >
+                {Icons.close}
+              </button>
+            </div>
+
+            {/* Content */}
+            <div className="px-6 py-4 max-h-[60vh] overflow-auto">
+              {shortcuts.map((section, idx) => (
+                <div key={section.category} className={idx > 0 ? 'mt-6' : ''}>
+                  <h3 className="text-xs font-semibold text-theme-muted uppercase tracking-wider mb-3">
+                    {section.category}
+                  </h3>
+                  <div className="space-y-2">
+                    {section.items.map((shortcut, i) => (
+                      <div key={i} className="flex items-center justify-between py-1.5">
+                        <span className="text-theme-primary">{shortcut.description}</span>
+                        <div className="flex items-center gap-1">
+                          {shortcut.keys.map((key, k) => (
+                            <kbd
+                              key={k}
+                              className="px-2 py-1 bg-surface-700 border border-surface-500 rounded text-xs font-mono text-theme-muted min-w-[24px] text-center"
+                            >
+                              {key}
+                            </kbd>
+                          ))}
+                        </div>
+                      </div>
+                    ))}
+                  </div>
+                </div>
+              ))}
+            </div>
+
+            {/* Footer */}
+            <div className="px-6 py-3 border-t border-surface-600 text-center">
+              <span className="text-xs text-theme-muted">
+                Press <kbd className="px-1.5 py-0.5 bg-surface-700 border border-surface-500 rounded text-xs font-mono">Esc</kbd> to close
+              </span>
+            </div>
+          </div>
+        </div>
+      );
+    };
+    // ============ END KEYBOARD SHORTCUTS MODAL ============
+
     // Mock data - instances with working directories
     // Plans are auto-discovered from {workingDir}/plans/ if it exists
     const mockInstances = [
@@ -2021,6 +2118,9 @@ How to fix it.`,
       // Close confirmation state
       const [closeConfirmation, setCloseConfirmation] = useState(null);
 
+      // Shortcuts modal state
+      const [showShortcuts, setShowShortcuts] = useState(false);
+
       // Apply theme
       useEffect(() => {
         document.documentElement.classList.toggle('dark', isDark);
@@ -2038,9 +2138,22 @@ How to fix it.`,
             return;
           }
 
-          // Escape: exit focus mode
-          if (e.key === 'Escape' && focusedInstance) {
-            setFocusedInstance(null);
+          // Escape: close shortcuts modal, exit focus mode
+          if (e.key === 'Escape') {
+            if (showShortcuts) {
+              setShowShortcuts(false);
+              return;
+            }
+            if (focusedInstance) {
+              setFocusedInstance(null);
+              return;
+            }
+          }
+
+          // Cmd/Ctrl + ? or / : open keyboard shortcuts modal
+          if ((e.metaKey || e.ctrlKey) && (e.key === '?' || e.key === '/')) {
+            e.preventDefault();
+            setShowShortcuts(true);
             return;
           }
 
@@ -2069,6 +2182,43 @@ How to fix it.`,
             return;
           }
 
+          // Cmd/Ctrl + [ : previous tab
+          if ((e.metaKey || e.ctrlKey) && e.key === '[') {
+            e.preventDefault();
+            const currentIndex = sortedInstances.findIndex(i => i.id === activeInstance);
+            if (currentIndex > 0) {
+              setActiveInstance(sortedInstances[currentIndex - 1].id);
+              setCurrentView('instances');
+            } else if (sortedInstances.length > 0) {
+              // Wrap to last
+              setActiveInstance(sortedInstances[sortedInstances.length - 1].id);
+              setCurrentView('instances');
+            }
+            return;
+          }
+
+          // Cmd/Ctrl + ] : next tab
+          if ((e.metaKey || e.ctrlKey) && e.key === ']') {
+            e.preventDefault();
+            const currentIndex = sortedInstances.findIndex(i => i.id === activeInstance);
+            if (currentIndex < sortedInstances.length - 1) {
+              setActiveInstance(sortedInstances[currentIndex + 1].id);
+              setCurrentView('instances');
+            } else if (sortedInstances.length > 0) {
+              // Wrap to first
+              setActiveInstance(sortedInstances[0].id);
+              setCurrentView('instances');
+            }
+            return;
+          }
+
+          // Cmd/Ctrl + E: toggle plans panel
+          if ((e.metaKey || e.ctrlKey) && e.key === 'e' && !e.shiftKey) {
+            e.preventDefault();
+            setEditorPanelOpen(prev => !prev);
+            return;
+          }
+
           // Cmd/Ctrl + W: close active instance
           if ((e.metaKey || e.ctrlKey) && e.key === 'w' && currentView === 'instances') {
             e.preventDefault();
@@ -2078,7 +2228,7 @@ How to fix it.`,
         };
         window.addEventListener('keydown', handleKeyDown);
         return () => window.removeEventListener('keydown', handleKeyDown);
-      }, [focusedInstance, activeInstance, editingInstanceId, currentView, instances, sortedInstances, activeInst]);
+      }, [focusedInstance, activeInstance, editingInstanceId, currentView, instances, sortedInstances, activeInst, showShortcuts]);
 
       const activeInst = instances.find(i => i.id === activeInstance);
       const plansForActiveInstance = activeInst?.hasPlansDir ? mockPlansByDir[activeInst.workingDir] : null;
@@ -2339,6 +2489,18 @@ How to fix it.`,
                 setCurrentView('instances'); // Exit home/history when switching layouts
               }} />
               <ThemeToggle isDark={isDark} onToggle={() => setIsDark(!isDark)} />
+              <Tooltip text="Keyboard shortcuts (⌘?)" position="bottom">
+                <button
+                  onClick={() => setShowShortcuts(true)}
+                  className="p-2 rounded-lg text-theme-muted hover:text-theme-primary hover:bg-surface-700 transition-colors"
+                >
+                  <svg className="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
+                    <circle cx="12" cy="12" r="10"/>
+                    <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
+                    <circle cx="12" cy="17" r="0.5" fill="currentColor"/>
+                  </svg>
+                </button>
+              </Tooltip>
             </div>
           </header>
 
@@ -2539,6 +2701,12 @@ How to fix it.`,
             instance={closeConfirmation}
             onConfirm={confirmClose}
             onCancel={cancelClose}
+          />
+
+          {/* Keyboard Shortcuts Modal */}
+          <ShortcutsModal
+            isOpen={showShortcuts}
+            onClose={() => setShowShortcuts(false)}
           />
         </div>
       );
