--- a/mockups/index.html
+++ b/mockups/index.html
@@ -1002,11 +1002,6 @@ How to fix it.`,
           <path d="M18 6L6 18M6 6l12 12" />
         </svg>
       ),
-      inject: (
-        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
-          <path d="M12 5v14M5 12l7 7 7-7" />
-        </svg>
-      ),
       sun: (
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
           <circle cx="12" cy="12" r="5" />
@@ -1120,7 +1115,7 @@ How to fix it.`,
     );
 
     // Fake MDX Editor Toolbar
-    const EditorToolbar = ({ onInject }) => (
+    const EditorToolbar = () => (
       <div className="flex items-center gap-1 px-3 py-2 bg-surface-700 border-b border-surface-600">
         <div className="flex items-center gap-0.5">
           <button className="p-1.5 rounded hover:bg-surface-600 text-theme-muted hover:text-theme-primary transition-colors font-bold text-sm">B</button>
@@ -1137,16 +1132,6 @@ How to fix it.`,
           <button className="p-1.5 rounded hover:bg-surface-600 text-theme-muted hover:text-theme-primary transition-colors text-sm">•</button>
           <button className="p-1.5 rounded hover:bg-surface-600 text-theme-muted hover:text-theme-primary transition-colors text-sm">1.</button>
         </div>
-        <div className="flex-1" />
-        <Tooltip text="Inject plan into terminal" position="left">
-          <button
-            onClick={onInject}
-            className="flex items-center gap-1.5 px-2 py-1 rounded bg-accent/20 text-accent hover:bg-accent/30 transition-colors text-xs font-medium"
-          >
-            {Icons.inject}
-            Inject
-          </button>
-        </Tooltip>
       </div>
     );
 
@@ -1284,7 +1269,7 @@ How to fix it.`,
     };
 
     // Full-screen Editor Overlay
-    const FullScreenEditor = ({ plan, onClose, onInject }) => (
+    const FullScreenEditor = ({ plan, onClose }) => (
       <div className="fixed inset-0 z-50 bg-surface-900 flex flex-col expand-in">
         <div className="flex items-center justify-between px-4 py-3 bg-surface-800 border-b border-surface-600">
           <div className="flex items-center gap-3">
@@ -1292,20 +1277,11 @@ How to fix it.`,
             <span className="font-medium text-theme-primary">{plan.name}</span>
             {plan.isDirty && <span className="text-xs text-accent">● Unsaved</span>}
           </div>
-          <div className="flex items-center gap-2">
-            <button
-              onClick={onInject}
-              className="flex items-center gap-1.5 px-3 py-1.5 rounded bg-accent/20 text-accent hover:bg-accent/30 transition-colors text-sm font-medium"
-            >
-              {Icons.inject}
-              Inject into Terminal
-            </button>
-            <button onClick={onClose} className="p-2 rounded hover:bg-surface-700 text-theme-muted hover:text-theme-primary transition-colors">
-              {Icons.collapse}
-            </button>
-          </div>
+          <button onClick={onClose} className="p-2 rounded hover:bg-surface-700 text-theme-muted hover:text-theme-primary transition-colors">
+            {Icons.collapse}
+          </button>
         </div>
-        <EditorToolbar onInject={onInject} />
+        <EditorToolbar />
         <EditorContent content={plan.content} onChange={() => {}} />
       </div>
     );
@@ -1330,7 +1306,6 @@ How to fix it.`,
       onSelectPlan,
       onNewPlan,
       onExpandEditor,
-      onInject,
       browserHeight,
       onBrowserResizeStart,
     }) => {
@@ -1369,7 +1344,7 @@ How to fix it.`,
                 </Tooltip>
               </div>
 
-              <EditorToolbar onInject={onInject} />
+              <EditorToolbar />
               <EditorContent content={selectedPlan.content} onChange={() => {}} />
             </>
           ) : (
@@ -2380,10 +2355,6 @@ How to fix it.`,
         alert('Create new plan in: ' + activeInst?.workingDir + '/plans/');
       };
 
-      const handleInject = () => {
-        alert(`Injecting plan "${selectedPlan?.name}" into terminal: ${activeInst?.name}`);
-      };
-
       const handleToggleSession = (sessionId) => {
         setExpandedSessions(prev => {
           const next = new Set(prev);
@@ -2640,7 +2611,6 @@ How to fix it.`,
                       onSelectPlan={setSelectedPlanId}
                       onNewPlan={handleNewPlan}
                       onExpandEditor={() => selectedPlan && setFullScreenPlan(selectedPlan)}
-                      onInject={handleInject}
                       browserHeight={browserHeight}
                       onBrowserResizeStart={handleBrowserResizeStart}
                     />
@@ -2691,7 +2661,6 @@ How to fix it.`,
             <FullScreenEditor
               plan={fullScreenPlan}
               onClose={() => setFullScreenPlan(null)}
-              onInject={handleInject}
             />
           )}
 
