feat: Add favicon and OG image branding
- Add custom favicon SVG with Y-shaped orchestrator design
  - Uses amber accent color (#f59e0b) matching app theme
  - Three connected nodes representing managed instances
- Add OG image (1200x630) with:
  - App name "Yojimbo" with amber "Yo" highlight
  - "Claude Code Orchestrator" tagline
  - Visual representation of instance cards
- Update index.html with:
  - Proper favicon link
  - OG meta tags for social sharing
  - Twitter card meta tags
  - Theme color meta tag
  - Updated page title and description

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yojimbo</title>
+    <title>Yojimbo - Claude Code Orchestrator</title>
+    <meta name="description" content="Manage multiple Claude Code instances from a single interface. Orchestrate, monitor, and control your AI coding sessions." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="theme-color" content="#0a0a0b" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Yojimbo - Claude Code Orchestrator" />
+    <meta property="og:description" content="Manage multiple Claude Code instances from a single interface. Orchestrate, monitor, and control your AI coding sessions." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Yojimbo - Claude Code Orchestrator" />
+    <meta name="twitter:description" content="Manage multiple Claude Code instances from a single interface." />
+    <meta name="twitter:image" content="/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
