--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
-    <meta name="theme-color" content="#0a0a0b" />
+    <meta name="theme-color" content="#2e3440" />
 
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
