feat: Add mobile-responsive layout with gesture navigation
- Add MobileLayout component with swipe gesture navigation
  - Swipe down from top: settings drawer
  - Swipe up from bottom: instance list drawer
- Add useMobileLayout hook for viewport detection and fullscreen support
- Add PWA manifest and iOS meta tags for standalone mode
- Update NewInstanceModal with mobile-friendly styling
- Add desktop E2E smoke tests to prevent regressions
- Add mobile-specific CSS for viewport locking and scroll handling

--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,14 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
-    <meta name="theme-color" content="#2e3440" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#1a1a2e" />
+
+    <!-- PWA / iOS Standalone Mode -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Yojimbo" />
 
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
