--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Yojimbo - Claude Code Orchestrator</title>
     <meta name="description" content="Manage multiple Claude Code instances from a single interface. Orchestrate, monitor, and control your AI coding sessions." />
 
